--- a/ProjectCarsFrontend/src/css/ChampionshipTool.css
+++ b/ProjectCarsFrontend/src/css/ChampionshipTool.css
@@ -17,8 +17,7 @@
   height: 100vh;
   width: 100vw;
   text-align: center;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://www.transparenttextures.com/patterns/checkered-pattern.png') repeat;
-  background-size: 50px 50px; /* Adjust the size of the checkered pattern */
+  background: url(./img/fondo.jpeg);
   padding: 40px 20px;
 }
 
